unpackaged/main/default/objects/Contract/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <formula>Account.ABN__c</formula>
    <inlineHelpText>ABN from Account</inlineHelpText>
    <label>Account ABN</label>
    <type>Text</type>
</CustomField>