unpackaged/main/default/objects/Contract/fields/Acceptance_Criteria_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Criteria_Clause_Ref__c</fullName>
    <label>Acceptance Criteria Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>