unpackaged/main/default/objects/Contract/fields/Account_Country_Area__c.field-meta.xml
<CustomField>
    <fullName>Account_Country_Area__c</fullName>
    <formula>TEXT(Account.CountryArea__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Country/Area</label>
    <type>Text</type>
</CustomField>