unpackaged/main/default/objects/Contract/fields/Account_Industry_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry_Vertical__c</fullName>
    <formula>TEXT(Account.Vertical_Market__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Industry/Vertical</label>
    <type>Text</type>
</CustomField>