unpackaged/main/default/objects/Contract/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <formula>TEXT(Account.T1_Industry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Segment</label>
    <type>Text</type>
</CustomField>