unpackaged/main/default/objects/Contract/fields/Additional_Insurance_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Insurance_Required__c</fullName>
    <inlineHelpText>If yes, T1 is required to purchase any additional/specific insurance coverage for this agreement</inlineHelpText>
    <label>Additional Insurance Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>