unpackaged/main/default/objects/Contract/fields/Additional_Purchase_of_Software_Services__c.field-meta.xml
<CustomField>
    <fullName>Additional_Purchase_of_Software_Services__c</fullName>
    <inlineHelpText>Can the Customer purchase additional Software/Services under this contract? If Yes - Subject to Conditions, see Legal.</inlineHelpText>
    <label>Additional Purchase of Software/Services</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes - Subject to Conditions</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>