unpackaged/main/default/objects/Contract/fields/Additional_SaaS_Platform_Products__c.field-meta.xml
<CustomField>
    <fullName>Additional_SaaS_Platform_Products__c</fullName>
    <inlineHelpText>Purchased by contract or by variation e.g. DRaaS, EdgeDB</inlineHelpText>
    <label>Additional SaaS Platform Products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>