unpackaged/main/default/objects/Contract/fields/Additional_SaaS_Platform_Products_Detail__c.field-meta.xml
<CustomField>
    <fullName>Additional_SaaS_Platform_Products_Detail__c</fullName>
    <inlineHelpText>Purchased by contract or variation e.g. DRaaS, EdgeDB</inlineHelpText>
    <label>Additional SaaS Platform Products Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>