unpackaged/main/default/objects/Contract/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Order Form</fullName>
                <label>T1 Service Order Form</label>
            </value>
            <value>
                <fullName>Solutions Agreement</fullName>
                <label>T1 Solutions Agreement</label>
            </value>
            <value>
                <fullName>Licence Agreement</fullName>
                <label>T1 Licence Agreement</label>
            </value>
            <value>
                <fullName>Customer Contract</fullName>
            </value>
            <value>
                <fullName>QITC</fullName>
            </value>
            <value>
                <fullName>GITC</fullName>
            </value>
            <value>
                <fullName>ProcureIT</fullName>
            </value>
            <value>
                <fullName>SourceIT</fullName>
            </value>
            <value>
                <fullName>WALGA</fullName>
            </value>
            <value>
                <fullName>G-Cloud</fullName>
            </value>
            <value>
                <fullName>APUC</fullName>
            </value>
            <value>
                <fullName>AMS - Application Managed Services Agreement</fullName>
                <label>AMS Agreement</label>
            </value>
            <value>
                <fullName>AMS - Temporary Uplift</fullName>
                <label>AMS Temporary Uplift</label>
            </value>
            <value>
                <fullName>Deed</fullName>
            </value>
            <value>
                <fullName>Variation/Change Order</fullName>
            </value>
            <value>
                <fullName>Letter of Agreement</fullName>
                <label>Letter of Agreement (Not Varying Existing Contract)</label>
            </value>
            <value>
                <fullName>Heads of Agreement</fullName>
            </value>
            <value>
                <fullName>Data Access Agreement</fullName>
            </value>
            <value>
                <fullName>Reseller Order (e.g. Chartis/XY Mapping)</fullName>
            </value>
            <value>
                <fullName>Data Processor Agreement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>