unpackaged/main/default/objects/Contract/fields/AMS_Annual_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>AMS_Annual_Contract_Value__c</fullName>
    <label>AMS Annual Contract Value (Initial)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>