unpackaged/main/default/objects/Contract/fields/AMS_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>AMS_Contract_Type__c</fullName>
    <label>AMS Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Term</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>