unpackaged/main/default/objects/Contract/fields/AMS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>AMS_End_Date__c</fullName>
    <inlineHelpText>For AMS Fixed Term</inlineHelpText>
    <label>AMS End Date</label>
    <type>Date</type>
</CustomField>