unpackaged/main/default/objects/Contract/fields/AMS_No_of_Requests_per_month__c.field-meta.xml
<CustomField>
    <fullName>AMS_No_of_Requests_per_month__c</fullName>
    <inlineHelpText>Number of Hours or Requests based on Program Type</inlineHelpText>
    <label>AMS Units per Service Period</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>