unpackaged/main/default/objects/Contract/fields/AMS_Pilot_Period__c.field-meta.xml
<CustomField>
    <fullName>AMS_Pilot_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AMS Pilot Period</label>
    <type>Checkbox</type>
</CustomField>