unpackaged/main/default/objects/Contract/fields/AMS_Pilot_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>AMS_Pilot_Period_End_Date__c</fullName>
    <label>AMS Pilot Period End Date</label>
    <type>Date</type>
</CustomField>