unpackaged/main/default/objects/Contract/fields/AMS_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>AMS_Program_Type__c</fullName>
    <label>AMS Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Requests</fullName>
            </value>
            <value>
                <fullName>Advanced Requests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>