unpackaged/main/default/objects/Contract/fields/AMS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AMS_Start_Date__c</fullName>
    <label>AMS Start Date</label>
    <type>Date</type>
</CustomField>