unpackaged/main/default/objects/Contract/fields/AMS_Superseded__c.field-meta.xml
<CustomField>
    <fullName>AMS_Superseded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AMS Superseded</label>
    <type>Checkbox</type>
</CustomField>