unpackaged/main/default/objects/Contract/fields/AMS_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>AMS_Termination_Date__c</fullName>
    <label>AMS Termination Date</label>
    <type>Date</type>
</CustomField>