unpackaged/main/default/objects/Contract/fields/AMS_Units_per_Service_Period_Baseline__c.field-meta.xml
<CustomField>
    <fullName>AMS_Units_per_Service_Period_Baseline__c</fullName>
    <label>AMS Units per Service Period (Baseline)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>