unpackaged/main/default/objects/Contract/fields/Annual_Insurance_Certificates_Required__c.field-meta.xml
<CustomField>
    <fullName>Annual_Insurance_Certificates_Required__c</fullName>
    <inlineHelpText>If Yes - T1 to send Annually, T1 must send insurance certificates to customer regardless of request. For frequency, see Insurance Requirements Detail</inlineHelpText>
    <label>Annual Insurance Certificates Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes - On Request</fullName>
            </value>
            <value>
                <fullName>Yes - T1 to Send Annually</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>