unpackaged/main/default/objects/Contract/fields/Approvals__c.field-meta.xml
<CustomField>
    <fullName>Approvals__c</fullName>
    <label>z_Approvals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RMC</fullName>
            </value>
            <value>
                <fullName>OO</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>