unpackaged/main/default/objects/Contract/fields/Archive_Box_No__c.field-meta.xml
<CustomField>
    <fullName>Archive_Box_No__c</fullName>
    <label>z_Archive Box No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>