unpackaged/main/default/objects/Contract/fields/ASM_Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>ASM_Anniversary_Date__c</fullName>
    <label>z_ASM Anniversary Date</label>
    <type>Date</type>
</CustomField>