unpackaged/main/default/objects/Contract/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <inlineHelpText>For Other, refer Other Cloud Term Notes</inlineHelpText>
    <label>Availability %</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>99.5%</fullName>
            </value>
            <value>
                <fullName>99.9%</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>