unpackaged/main/default/objects/Contract/fields/Availability_Days__c.field-meta.xml
<CustomField>
    <fullName>Availability_Days__c</fullName>
    <inlineHelpText>For Other, refer Other Cloud Term Notes</inlineHelpText>
    <label>Cloud Availability Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Available_Days</valueSetName>
    </valueSet>
</CustomField>