unpackaged/main/default/objects/Contract/fields/Availabilty_Hours__c.field-meta.xml
<CustomField>
    <fullName>Availabilty_Hours__c</fullName>
    <inlineHelpText>For Other, refer Other Cloud Term Notes.</inlineHelpText>
    <label>Cloud Availability Hours</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9-5</fullName>
            </value>
            <value>
                <fullName>7-7</fullName>
            </value>
            <value>
                <fullName>8-6</fullName>
            </value>
            <value>
                <fullName>24/7</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>