unpackaged/main/default/objects/Contract/fields/Backups_Frequency_to_be_Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Backups_Frequency_to_be_Sent_to_Customer__c</fullName>
    <inlineHelpText>Other - refer to Other SaaS Commercial Notes</inlineHelpText>
    <label>Backups Frequency to be Sent to Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>On Request, max 1 per month</fullName>
            </value>
            <value>
                <fullName>On Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>