unpackaged/main/default/objects/Contract/fields/Backups_Specified_to_be_Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Backups_Specified_to_be_Sent_to_Customer__c</fullName>
    <label>Backups Specified to be Sent to Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>