unpackaged/main/default/objects/Contract/fields/Bill_Hold_Clause__c.field-meta.xml
<CustomField>
    <fullName>Bill_Hold_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Bill &amp; Hold Clause Included</label>
    <type>Checkbox</type>
</CustomField>