unpackaged/main/default/objects/Contract/fields/Bill_Hold_Detail__c.field-meta.xml
<CustomField>
    <fullName>Bill_Hold_Detail__c</fullName>
    <label>z_Bill &amp; Hold Detail</label>
    <type>TextArea</type>
</CustomField>