unpackaged/main/default/objects/Contract/fields/Change_in_Sub_Processor__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Sub_Processor__c</fullName>
    <label>Change in Sub-Processor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Notice Required</fullName>
            </value>
            <value>
                <fullName>Consent Required</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>