unpackaged/main/default/objects/Contract/fields/Change_in_Sub_Processor_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Sub_Processor_Clause_Ref__c</fullName>
    <label>Change in Sub-Processor Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>