unpackaged/main/default/objects/Contract/fields/Changes_to_Nominated_Host__c.field-meta.xml
<CustomField>
    <fullName>Changes_to_Nominated_Host__c</fullName>
    <label>Changes to Nominated Host</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Notice Required</fullName>
            </value>
            <value>
                <fullName>Consent Required</fullName>
            </value>
            <value>
                <fullName>Bespoke</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>