unpackaged/main/default/objects/Contract/fields/Chargeable_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Travel_Time__c</fullName>
    <label>Chargeable Travel Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>