unpackaged/main/default/objects/Contract/fields/Cloud_Claim_Period__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Claim_Period__c</fullName>
    <label>Cloud Claim Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>