unpackaged/main/default/objects/Contract/fields/Cloud_Claim_Period_Detail__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Claim_Period_Detail__c</fullName>
    <label>Cloud Claim Period Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>