unpackaged/main/default/objects/Contract/fields/Cloud_Details__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Details__c</fullName>
    <inlineHelpText>This refers to Cloud Availability, refer to Support Terms for response, resolution and restore SLAs.</inlineHelpText>
    <label>Non-Standard Cloud SLAs Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>