unpackaged/main/default/objects/Contract/fields/Cloud_Earn_Back_Option_Detail__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Earn_Back_Option_Detail__c</fullName>
    <label>Cloud Earn Back Option Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>