unpackaged/main/default/objects/Contract/fields/Cloud_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Fee__c</fullName>
    <label>z_Cloud Fee</label>
    <length>10</length>
    <type>Text</type>
</CustomField>