unpackaged/main/default/objects/Contract/fields/Cloud_Hosting__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Hosting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloud/Hosting</label>
    <type>Checkbox</type>
</CustomField>