unpackaged/main/default/objects/Contract/fields/Cloud_Service_Credit__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Service_Credit__c</fullName>
    <inlineHelpText>This refers to Cloud Availability service credits, refer Support Terms for response, resolution and restore service credits.</inlineHelpText>
    <label>Cloud Service Credit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes - High Risk</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>