unpackaged/main/default/objects/Contract/fields/Cloud_Service_Credit_Cap_Detail__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Service_Credit_Cap_Detail__c</fullName>
    <label>Cloud Service Credit Cap Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>