unpackaged/main/default/objects/Contract/fields/Cloud_Service_Credit_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Service_Credit_Clause_Ref__c</fullName>
    <label>Cloud Service Credit Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>