unpackaged/main/default/objects/Contract/fields/Cloud_Service_Credit_Details__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Service_Credit_Details__c</fullName>
    <inlineHelpText>This refers to Cloud Availability service credits, refer Support Terms for response, resolution and restore service credits.</inlineHelpText>
    <label>Cloud Service Credit Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>