unpackaged/main/default/objects/Contract/fields/Cloud_SLA_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Cloud_SLA_Clause_Ref__c</fullName>
    <label>Cloud SLA Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>