unpackaged/main/default/objects/Contract/fields/Cloud_SLA_Level__c.field-meta.xml
<CustomField>
    <fullName>Cloud_SLA_Level__c</fullName>
    <label>Cloud SLA Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium - Extended Hours</fullName>
            </value>
            <value>
                <fullName>Premium - Service Credit</fullName>
            </value>
            <value>
                <fullName>Bespoke</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>