unpackaged/main/default/objects/Contract/fields/Cloud_SLA_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Cloud_SLA_Reporting__c</fullName>
    <inlineHelpText>This refers to Cloud Availability reporting, refer to Support Terms for response, resolution and restore reporting.</inlineHelpText>
    <label>Cloud SLA Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>