unpackaged/main/default/objects/Contract/fields/Cloud_SLA_Reporting_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Cloud_SLA_Reporting_Clause_Ref__c</fullName>
    <label>Cloud SLA Reporting Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>