unpackaged/main/default/objects/Contract/fields/Cloud_SLA_Reporting_Detail__c.field-meta.xml
<CustomField>
    <fullName>Cloud_SLA_Reporting_Detail__c</fullName>
    <inlineHelpText>This refers to Cloud Availability reporting, refer to Support Terms for response, resolution and restore reporting.</inlineHelpText>
    <label>Cloud SLA Reporting Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>