unpackaged/main/default/objects/Contract/fields/Cloud_SLA_Reporting_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Cloud_SLA_Reporting_Frequency__c</fullName>
    <inlineHelpText>For other, refer Other Cloud Terms Notes</inlineHelpText>
    <label>Cloud SLA Reporting Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>