unpackaged/main/default/objects/Contract/fields/Cloud_Terms_Version__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Terms_Version__c</fullName>
    <label>z_Cloud Terms Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>