unpackaged/main/default/objects/Contract/fields/Confidentiality_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Clause_Ref__c</fullName>
    <label>Confidentiality Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>