unpackaged/main/default/objects/Contract/fields/Confidentiality_Obligations__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Obligations__c</fullName>
    <label>Confidentiality Obligations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Mutual</fullName>
                <default>true</default>
                <label>Mutual</label>
            </value>
            <value>
                <fullName>T1 only</fullName>
            </value>
            <value>
                <fullName>Customer only</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>