unpackaged/main/default/objects/Contract/fields/Consequential_Loss_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Consequential_Loss_Clause_Ref__c</fullName>
    <label>Consequential Loss Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>