unpackaged/main/default/objects/Contract/fields/Consulting_Cancel_Suspension_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Cancel_Suspension_Clause_Ref__c</fullName>
    <label>Consulting Cancel/Suspension Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>